# float_approx_math

./: Cargo.toml  README.md
src/: approx_cos.rs  approx_inv_sqrt.rs  approx_sin.rs  approx_sqrt.rs  lib.rs  plot.rs
