[package]
name = "float_approx_math"
version = "0.1.6"
edition = "2021"
license = "MIT"
keywords = ["math", "float", "const", "compile-time", "approximation"]
categories = ["algorithms", "mathematics"]
description = "A math library for compile-time floating-point approximations (sqrt, sin, cos, etc...)"
repository = "https://github.com/sigurd4/float_approx_math"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sin", "sqrt"]
no_array_trait = ["sqrt"]

sin = ["dep:polynomial_ops", "dep:array_trait"]
sqrt = []

[dependencies]
moddef = "0.2.2"
polynomial_ops = {version = "0.1.5", optional = true}
array_trait = {version = "0.6.17", optional = true}

[dev-dependencies]
plotters = "^0.3.5"
linspace = "^0.1.0"
array_trait = "^0.6.17"